--- a/gallery.html
+++ b/gallery.html
@@ -280,23 +280,6 @@
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
-					<p>Tyler Reed</p>
-				</div>
-				<a title="Click to view" onclick="openViewer('resources/pictures/tylerReed.jpg', 'Tyler Reed')">
-					<img src="resources/thumbnails/tylerReed_t.jpg" alt="Tyler Reed" width="230" height="230">
-				</a>
-				<div class="description">
-					<p>Oil</p>
-					<p>16" &times; 20"</p>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="oil all">
-		<div class="responsive">
-			<div class="panel">
-				<div class="title">
 					<p>Comforting</p>
 				</div>
 				<a title="Click to view" onclick="openViewer('resources/pictures/comforting.jpg', 'Comforting')">
@@ -411,6 +394,23 @@
 			</div>
 		</div>
 	</div>
+
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Pink Roses</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/pinkRoses.png', 'Pink Roses')">
+                    <img src="resources/thumbnails/pinkRoses_t.jpg" alt="Pink Roses" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>5" &times; 7"</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
 	<div class="oil all">
 		<div class="responsive">
@@ -1007,6 +1007,312 @@
 			</div>
 		</div>
 	</div>
+
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Hershey's Kiss</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/hersheyKiss.jpg', 'Hershey\'s Kiss')">
+                    <img src="resources/thumbnails/hersheyKiss_t.jpg" alt="Hershey's Kiss" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>24" &times; 36"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Grandpa & Me</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/grandpaMe.jpg', 'Grandpa & Me')">
+                    <img src="resources/thumbnails/grandpaMe_t.jpg" alt="Grandpa & Me" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>24" &times; 30"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Alaskan Wilderness</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/alaskanWilderness.jpg', 'Alaskan Wilderness')">
+                    <img src="resources/thumbnails/alaskanWilderness_t.jpg" alt="Alaskan Wilderness" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>36" &times; 24"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Serenity</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/serenity.jpg', 'Serenity')">
+                    <img src="resources/thumbnails/serenity_t.jpg" alt="Serenity" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>29.5" &times; 24"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Loving Sisters</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/lovingSisters.jpg', 'Loving Sisters')">
+                    <img src="resources/thumbnails/lovingSisters_t.jpg" alt="Loving Sisters" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>24" &times; 30"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Great Smoky Mountain</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/greatSmokyMountain.jpg', 'Great Smoky Mountain Nat\'l Park')">
+                    <img src="resources/thumbnails/greatSmokyMountain_t.jpg" alt="Great Smoky Mountain Nat'l Park" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>36" &times; 24"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Autumn</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/autumn.jpg', 'Autumn')">
+                    <img src="resources/thumbnails/autumn_t.jpg" alt="Autumn" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>22" &times; 28"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Mountain Majesty</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/mountainMajesty.jpg', 'Mountain Majesty')">
+                    <img src="resources/thumbnails/mountainMajesty_t.jpg" alt="Mountain Majesty" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>48" &times; 24"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Grapes</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/grapes.jpg', 'Grapes')">
+                    <img src="resources/thumbnails/grapes_t.jpg" alt="Grapes" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>8" &times; 16"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Yellow Daisies</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/yellowDaisies.jpg', 'Yellow Daisies')">
+                    <img src="resources/thumbnails/yellowDaisies_t.jpg" alt="Yellow Daisies" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>11" &times; 14"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Kaylynn Reed</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/kaylynnReed.jpg', 'Kaylynn Reed')">
+                    <img src="resources/thumbnails/kaylynnReed_t.jpg" alt="Kaylynn Reed" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>16" &times; 20"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="oil all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
+					<p>Tyler Reed</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/tylerReed.jpg', 'Tyler Reed')">
+					<img src="resources/thumbnails/tylerReed_t.jpg" alt="Tyler Reed" width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Oil</p>
+					<p>16" &times; 20"</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Carolynn Minor</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/carolynnMinor.jpg', 'Carolynn Minor')">
+                    <img src="resources/thumbnails/carolynnMinor_t.jpg" alt="Carolynn Minor" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>20" &times; 24"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Ron Minor</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/ronMinor.jpg', 'Ron Minor')">
+                    <img src="resources/thumbnails/ronMinor_t.jpg" alt="Ron Minor" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>20" &times; 24"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Lynda Minor</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/lyndaMinor.jpg', 'Lynda Minor')">
+                    <img src="resources/thumbnails/lyndaMinor_t.jpg" alt="Lynda Minor" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>20" &times; 24"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Bob Minor</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/bobMinor.jpg', 'Bob Minor')">
+                    <img src="resources/thumbnails/bobMinor_t.jpg" alt="Bob Minor" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>20" &times; 24"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Denise Minor</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/deniseMinor.png', 'Denise Minor')">
+                    <img src="resources/thumbnails/deniseMinor_t.jpg" alt="Denise Minor" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>15" &times; 20"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Debbie Minor</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/debbieMinor.png', 'Debbie Minor')">
+                    <img src="resources/thumbnails/debbieMinor_t.jpg" alt="Debbie Minor" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>15" &times; 20"</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </div>
 </div>
