--- a/gallery.html
+++ b/gallery.html
@@ -208,6 +208,23 @@
 		</div>
 	</div>
 
+    <div class="penInk all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Minor's Home</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/minorHome.jpg', 'Minor\'s Home')">
+                    <img src="resources/thumbnails/minorHome_t.jpg" alt="Minor's Home" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Pen & Ink</p>
+                    <p>15" &times; 11.5"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
 	<div class="penInk all">
 		<div class="responsive">
 			<div class="panel">
@@ -1309,6 +1326,210 @@
                 <div class="description">
                     <p>Oil</p>
                     <p>15" &times; 20"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="pencil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Brendan Newberry</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/brendanNewberry.jpg', 'Brendan Newberry')">
+                    <img src="resources/thumbnails/brendanNewberry_t.jpg" alt="Brendan Newberry" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Pencil</p>
+                    <p>7.5" &times; 9.5"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="pencil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Denise Newberry</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/deniseNewberry.jpg', 'Denise Newberry')">
+                    <img src="resources/thumbnails/deniseNewberry_t.jpg" alt="Denise Newberry" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Pencil</p>
+                    <p>7.5" &times; 9.5"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="pencil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Cat Newberry</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/catNewberry2.jpg', 'Cat Newberry')">
+                    <img src="resources/thumbnails/catNewberry2_t.jpg" alt="Cat Newberry" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Pencil</p>
+                    <p>7.5" &times; 9.5"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="pencil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Robby Newberry</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/robbyNewberry.jpg', 'Robby Newberry')">
+                    <img src="resources/thumbnails/robbyNewberry_t.jpg" alt="Robby Newberry" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Pencil</p>
+                    <p>7.5" &times; 9.5"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+	<div class="pencil all">
+	    <div class="responsive">
+	        <div class="panel">
+	            <div class="title">
+	                <p>Aaron Buckles</p>
+	            </div>
+	            <a title="Click to view" onclick="openViewer('resources/pictures/aaronBuckles.jpg', 'Aaron Buckles')">
+	                <img src="resources/thumbnails/aaronBuckles_t.jpg" alt="Aaron Buckles" width="230" height="230">
+	            </a>
+	            <div class="description">
+	                <p>Pencil</p>
+	                <p>7.5" &times; 9.5"</p>
+	            </div>
+	        </div>
+	    </div>
+	</div>
+
+	<div class="pencil all">
+	    <div class="responsive">
+	        <div class="panel">
+	            <div class="title">
+	                <p>Mason Buckles</p>
+	            </div>
+	            <a title="Click to view" onclick="openViewer('resources/pictures/masonBuckles.jpg', 'Mason Buckles')">
+	                <img src="resources/thumbnails/masonBuckles_t.jpg" alt="Mason Buckles" width="230" height="230">
+	            </a>
+	            <div class="description">
+	                <p>Pencil</p>
+	                <p>7.5" &times; 9.5"</p>
+	            </div>
+	        </div>
+	    </div>
+	</div>
+
+    <div class="pencil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Debbie & Aaron</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/debbieAaron.jpg', 'Debbie & Aaron')">
+                    <img src="resources/thumbnails/debbieAaron_t.jpg" alt="Debbie & Aaron" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Pencil</p>
+                    <p>9.5" &times; 7.5"</p>
+                </div>
+            </div>
+        </div>
+    </div>  
+
+    <div class="pencil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Reggie's Patience</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/reggiePatience.jpg', 'Reggie\'s Patience with Mason')">
+                    <img src="resources/thumbnails/reggiePatience_t.jpg" alt="Reggie's Patience with Mason" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Pencil</p>
+                    <p>7.5" &times; 9.5"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="pencil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Reggie</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/reggie.jpg', 'Reggie (Havanese)')">
+                    <img src="resources/thumbnails/reggie_t.jpg" alt="Reggie (Havanese)" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Pencil</p>
+                    <p>7.5" &times; 10.5"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="pencil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Blow That Horn</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/blowThatHorn.jpg', 'Blow That Horn')">
+                    <img src="resources/thumbnails/blowThatHorn_t.jpg" alt="Blow That Horn" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Pencil</p>
+                    <p>10.5" &times; 13.5"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="pencil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Mark & Jacob</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/markJacob.jpg', 'Mark & Jacob Woolsey')">
+                    <img src="resources/thumbnails/markJacob_t.jpg" alt="Mark & Jacob Woolsey" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Pencil</p>
+                    <p>7.5" &times; 10.5"</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="penInk all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>Old Mill</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/oldMill.jpg', 'Old Mill')">
+                    <img src="resources/thumbnails/oldMill_t.jpg" alt="Old Mill" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Pen & Ink</p>
+                    <p>7.5" &times; 9.5"</p>
                 </div>
             </div>
         </div>
