Added back to top link

--- a/gallery.html
+++ b/gallery.html
@@ -53,6 +53,7 @@
 	</div>
 </div>
 
+<div id="top"></div>
 
 <div id="pageBody">
 <!--Navigation Bar-->
@@ -1857,6 +1858,14 @@
             </div>
         </div>
     </div> -->
+
+    <div class="pencil all">
+		<div class="responsive">
+			<div class="panel title">
+				<a href="#top">Back to top</a>
+			</div>
+		</div>
+	</div>
 
 </div>
 </div>
