--- a/gallery.html
+++ b/gallery.html
@@ -1859,7 +1859,7 @@
         </div>
     </div> -->
 
-    <div class="pencil all">
+    <div class="pencil penInk oil other all">
 		<div class="responsive">
 			<div class="panel title">
 				<a href="#top">Back to top</a>
