--- a/gallery.html
+++ b/gallery.html
@@ -1825,6 +1825,23 @@
 		</div>
 	</div>
 
+	<div class="Oil all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
+					<p>Jana Jobes</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/janaJobes.jpg', 'Jana Jobes')">
+					<img src="resources/thumbnails/janaJobes_t.jpg" alt="Jana Jobes" width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Oil</p>
+					<p>16" &times; 20"</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
 <!--     <div class="pencil all">
         <div class="responsive">
             <div class="panel">
