Removed degraded photo quality from tranquada

--- a/gallery.html
+++ b/gallery.html
@@ -457,7 +457,7 @@
 					<img src="resources/thumbnails/robertTranquada_t.jpg" alt="Robert Tranquada, M.D." width="230" height="230">
 				</a>
 				<div class="description">
-					<p>Oil: degraded photo quality</p>
+					<p>Oil</p>
 					<p>22" &times; 24"</p>
 				</div>
 			</div>
