Jobes is will only show in oil now

--- a/gallery.html
+++ b/gallery.html
@@ -1825,7 +1825,7 @@
 		</div>
 	</div>
 
-	<div class="Oil all">
+	<div class="oil all">
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
