--- a/gallery.html
+++ b/gallery.html
@@ -542,7 +542,7 @@
 					<img src="resources/thumbnails/bentonMinor_t.jpg" alt="Benton Minor" width="230" height="230">
 				</a>
 				<div class="description">
-					<p>Oil: degraded photo quality</p>
+					<p>Oil</p>
 					<p>22" &times; 24"</p>
 				</div>
 			</div>
@@ -608,6 +608,23 @@
 				</div>
 				<a title="Click to view" onclick="openViewer('resources/pictures/frankZappa.jpg', 'Frank Zappa')">
 					<img src="resources/thumbnails/frankZappa_t.jpg" alt="Frank Zappa" width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Pencil</p>
+					<p>9.5" &times; 12.4"</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="pencil all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
+					<p>Frank Sinatra</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/frankSinatra.jpg', 'Frank Sinatra')">
+					<img src="resources/thumbnails/frankSinatra_t.jpg" alt="Frank Sinatra" width="230" height="230">
 				</a>
 				<div class="description">
 					<p>Pencil</p>
@@ -1875,6 +1892,22 @@
             </div>
         </div>
     </div> -->
+
+    <div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>California Redwoods</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/caRedwoods.jpg')">
+                    <img src="resources/thumbnails/caRedwoods_t.jpg" alt="CA Redwoods" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>0" &times; 0"</p>
+                </div>
+            </div>
+    </div>
 
     <div class="pencil penInk oil other all">
 		<div class="responsive">
