Changed slideshow images

--- a/gallery.html
+++ b/gallery.html
@@ -162,6 +162,23 @@
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
+					<p>Wild Horses</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/wildHorses.jpg', 'Wild Horses')">
+					<img src="resources/thumbnails/wildHorses_t.jpg" alt="Wild Horses" width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Oil</p>
+					<p>0" &times; 0"</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="oil all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
 					<p>Happy Feet</p>
 				</div>
 				<a title="Click to view" onclick="openViewer('resources/pictures/happyFeet.jpg', 'Happy Feet')">
@@ -1899,7 +1916,7 @@
                 <div class="title">
                     <p>California Redwoods</p>
                 </div>
-                <a title="Click to view" onclick="openViewer('resources/pictures/caRedwoods.jpg')">
+                <a title="Click to view" onclick="openViewer('resources/pictures/caRedwoods.jpg', 'California Redwoods')">
                     <img src="resources/thumbnails/caRedwoods_t.jpg" alt="CA Redwoods" width="230" height="230">
                 </a>
                 <div class="description">
