--- a/gallery.html
+++ b/gallery.html
@@ -124,6 +124,23 @@
 		</div>
 	</div>
 
+	<div class="oil all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
+					<p>Nutcracker</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/nutcracker.jpg', 'Nutcracker')">
+					<img src="resources/thumbnails/nutcracker_t.jpg" alt="Nutcracker" width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Oil</p>
+					<p>18" &times; 24"</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<div class="pencil all">
 		<div class="responsive">
 			<div class="panel">
