--- a/gallery.html
+++ b/gallery.html
@@ -94,6 +94,23 @@
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
+					<p>First Love</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/firstLove.jpg', 'First Love')">
+					<img src="resources/thumbnails/firstLove_t.jpg" alt="First Love" width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Oil</p>
+					<p>24" &times; 36"</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="oil all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
 					<p>Kitty in Trouble</p>
 				</div>
 				<a title="Click to view" onclick="openViewer('resources/pictures/kittyInTrouble.jpg', 'Kitty in Trouble')">
@@ -128,10 +145,10 @@
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
-					<p>Nutcracker</p>
+					<p>Nutcracker Ballet</p>
 				</div>
-				<a title="Click to view" onclick="openViewer('resources/pictures/nutcracker.jpg', 'Nutcracker')">
-					<img src="resources/thumbnails/nutcracker_t.jpg" alt="Nutcracker" width="230" height="230">
+				<a title="Click to view" onclick="openViewer('resources/pictures/nutcracker.jpg', 'Nutcracker Ballet')">
+					<img src="resources/thumbnails/nutcracker_t.jpg" alt="Nutcracker Ballet" width="230" height="230">
 				</a>
 				<div class="description">
 					<p>Oil</p>
@@ -175,22 +192,7 @@
 		</div>
 	</div>
 
-	<div class="oil all">
-		<div class="responsive">
-			<div class="panel">
-				<div class="title">
-					<p>Wild Horses</p>
-				</div>
-				<a title="Click to view" onclick="openViewer('resources/pictures/wildHorses.jpg', 'Wild Horses')">
-					<img src="resources/thumbnails/wildHorses_t.jpg" alt="Wild Horses" width="230" height="230">
-				</a>
-				<div class="description">
-					<p>Oil</p>
-					<p>0" &times; 0"</p>
-				</div>
-			</div>
-		</div>
-	</div>
+
 
 	<div class="oil all">
 		<div class="responsive">
@@ -294,6 +296,40 @@
 		</div>
 	</div>
 
+	<div class="penInk all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
+					<p>Dismuke's Home</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/dismukesHome.jpg', 'Dismuke\'s Home')">
+					<img src="resources/thumbnails/dismukesHome_t.jpg" alt="Dismuke's Home" width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Pen & Ink - Degraded photo quality</p>
+					<p>9.5" &times; 7.5"</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="oil all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
+					<p>One Room School</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/oneRoomSchool.jpg', 'One Room School')">
+					<img src="resources/thumbnails/oneRoomSchool_t.jpg" alt="One Room School" width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Oil - Degraded photo quality</p>
+					<p>24" &times; 20"</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<div class="oil all">
 		<div class="responsive">
 			<div class="panel">
@@ -306,6 +342,23 @@
 				<div class="description">
 					<p>Oil</p>
 					<p>40" &times; 30"</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="pencil all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
+					<p>Lazy River</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/lazyRiver.jpg', 'Lazy River')">
+					<img src="resources/thumbnails/lazyRiver_t.jpg" alt="Lazy River" width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Pencil</p>
+					<p>7.5" &times; 9.5"</p>
 				</div>
 			</div>
 		</div>
@@ -906,6 +959,21 @@
 		</div>
 	</div>
 
+	<div class="oil all">
+        <div class="responsive">
+            <div class="panel">
+                <div class="title">
+                    <p>California Redwoods</p>
+                </div>
+                <a title="Click to view" onclick="openViewer('resources/pictures/caRedwoods.jpg', 'California Redwoods')">
+                    <img src="resources/thumbnails/caRedwoods_t.jpg" alt="CA Redwoods" width="230" height="230">
+                </a>
+                <div class="description">
+                    <p>Oil</p>
+                    <p>36" &times; 24"</p>
+                </div>
+            </div>
+    </div>
 
 	<div class="oil all">
 		<div class="responsive">
@@ -1383,6 +1451,41 @@
 		</div>
 	</div>
 
+	<div class="oil all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
+					<p>Jana Jobes</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/janaJobes.jpg', 'Jana Jobes')">
+					<img src="resources/thumbnails/janaJobes_t.jpg" alt="Jana Jobes" width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Oil</p>
+					<p>16" &times; 20"</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="oil all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
+					<p>Wild Horses</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/wildHorses.jpg', 'Wild Horses')">
+					<img src="resources/thumbnails/wildHorses_t.jpg" alt="Wild Horses" width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Oil</p>
+					<p>0" &times; 0"</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
 	<div class="pencil all">
 		<div class="responsive">
 			<div class="panel">
@@ -1642,6 +1745,23 @@
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
+					<p>Robby's First Day Home</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/robbysFirstDay.jpg', 'Robby\'s First Day Home')">
+					<img src="resources/thumbnails/robbysFirstDay_t.jpg" alt="Robby's First Day Home" width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Pencil</p>
+					<p>11" &times; 8.5"</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="pencil all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
 					<p>Aaron & Mason</p>
 				</div>
 				<a title="Click to view" onclick="openViewer('resources/pictures/aaronMasonBuckles.jpg', 'Aaron & Mason Buckles')">
@@ -1876,23 +1996,6 @@
 		</div>
 	</div>
 
-	<div class="oil all">
-		<div class="responsive">
-			<div class="panel">
-				<div class="title">
-					<p>Jana Jobes</p>
-				</div>
-				<a title="Click to view" onclick="openViewer('resources/pictures/janaJobes.jpg', 'Jana Jobes')">
-					<img src="resources/thumbnails/janaJobes_t.jpg" alt="Jana Jobes" width="230" height="230">
-				</a>
-				<div class="description">
-					<p>Oil</p>
-					<p>16" &times; 20"</p>
-				</div>
-			</div>
-		</div>
-	</div>
-
 <!--     <div class="pencil all">
         <div class="responsive">
             <div class="panel">
@@ -1926,22 +2029,6 @@
             </div>
         </div>
     </div> -->
-
-    <div class="oil all">
-        <div class="responsive">
-            <div class="panel">
-                <div class="title">
-                    <p>California Redwoods</p>
-                </div>
-                <a title="Click to view" onclick="openViewer('resources/pictures/caRedwoods.jpg', 'California Redwoods')">
-                    <img src="resources/thumbnails/caRedwoods_t.jpg" alt="CA Redwoods" width="230" height="230">
-                </a>
-                <div class="description">
-                    <p>Oil</p>
-                    <p>0" &times; 0"</p>
-                </div>
-            </div>
-    </div>
 
     <div class="pencil penInk oil other all">
 		<div class="responsive">
