--- a/gallery.html
+++ b/gallery.html
@@ -106,6 +106,22 @@
 			</div>
 		</div>
 	</div>
+	
+	<div class="oil all">
+		<div class="responsive">
+		    <div class="panel">
+			<div class="title">
+			    <p>California Redwoods</p>
+			</div>
+			<a title="Click to view" onclick="openViewer('resources/pictures/caRedwoods.jpg', 'California Redwoods')">
+			    <img src="resources/thumbnails/caRedwoods_t.jpg" alt="CA Redwoods" width="230" height="230">
+			</a>
+			<div class="description">
+			    <p>Oil</p>
+			    <p>0" &times; 0"</p>
+			</div>
+    		</div>
+    	</div>
 
 	<div class="oil all">
 		<div class="responsive">
