--- a/gallery.html
+++ b/gallery.html
@@ -145,6 +145,23 @@
 		<div class="responsive">
 			<div class="panel">
 				<div class="title">
+					<p>Cinderella</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/cinderella.jpg', 'Cinderella')">
+					<img src="resources/thumbnails/cinderella_t.jpg" alt="Cinderella" width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Oil</p>
+					<p>18" &times; 24"</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+<!-- 	<div class="oil all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
 					<p>Nutcracker Ballet</p>
 				</div>
 				<a title="Click to view" onclick="openViewer('resources/pictures/nutcracker.jpg', 'Nutcracker Ballet')">
@@ -156,7 +173,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	<div class="pencil all">
 		<div class="responsive">
@@ -966,6 +983,23 @@
 				</div>
 				<a title="Click to view" onclick="openViewer('resources/pictures/rangiroa.jpg', 'Rangiroa, Tahiti')">
 					<img src="resources/thumbnails/rangiroa_t.jpg" alt="Rangiroa, Tahiti" width="230" height="230">
+				</a>
+				<div class="description">
+					<p>Oil</p>
+					<p>36" &times; 24"</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="oil all">
+		<div class="responsive">
+			<div class="panel">
+				<div class="title">
+					<p>Wildflowers</p>
+				</div>
+				<a title="Click to view" onclick="openViewer('resources/pictures/wildflowers.jpg', 'High Desert Wildflowers')">
+					<img src="resources/thumbnails/wildflowers_t.jpg" alt="High Desert Wildflowers" width="230" height="230">
 				</a>
 				<div class="description">
 					<p>Oil</p>
@@ -2029,6 +2063,7 @@
 			</div>
 		</div>
 	</div>
+
     <div class="pencil penInk oil other all">
 		<div class="responsive">
 			<div class="panel title">
