--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 layout: default
 title: Gerry Minor's Fine Art
 ---
-<div class="slideshow">
+<h1>Home</h1>
+<!-- <div class="slideshow">
 	<img id="slide" src="" alt="Drawing">
 	<div class="btn-group">
 		<button class="fa fa-arrow-left" title="Previous" type="button" onclick="previousSlide()"></button>
 		<button class="fa fa-arrow-right" title="Next" type="button" onclick="nextSlide()"></button>
 	</div>
-</div>
+</div> -->
