--- a/404.html
+++ b/404.html
@@ -5,11 +5,11 @@ permalink: /404.html
 <html>
 	<head>
 		<title>404</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/main.css">
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.png">
 	</head>
 	<body>
 		<h1>Nice job! You got lost.</h1>
-		<p><a href="/">Click here to get unlost</a></p>
+		<p><a href="/gerry-minors-fine-art">Click here to get unlost</a></p>
 	</body>
 </html>
