--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
 layout: default
 title: Gerry Minor's Fine Art
+css: home/home.css
 ---
-<h1>Home</h1>
-<!-- <div class="slideshow">
+<div class="slideshow">
 	<img id="slide" src="" alt="Drawing">
 	<div class="btn-group">
 		<button class="fa fa-arrow-left" title="Previous" type="button" onclick="previousSlide()"></button>
 		<button class="fa fa-arrow-right" title="Next" type="button" onclick="nextSlide()"></button>
 	</div>
-</div> -->
+</div>
