--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ css: home/home.css
 <div class="slideshow">
 	<img id="slide" src="" alt="Drawing">
 	<div class="btn-group">
-		<button class="fa fa-arrow-left" title="Previous" type="button" onclick="previousSlide()"></button>
-		<button class="fa fa-arrow-right" title="Next" type="button" onclick="nextSlide()"></button>
+		<button title="Previous" type="button" onclick="previousSlide()">Prev</button>
+		<button title="Next" type="button" onclick="nextSlide()">Next</button>
 	</div>
 </div>
