--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: default
 title: Gerry Minor's Fine Art
 css: home/home.css
+js: home/slideshow.js
 ---
 <div class="slideshow">
 	<img id="slide" src="" alt="Drawing">
