--- a/contact/index.html
+++ b/contact/index.html
@@ -1,58 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-
-<title>Contact</title>
-<link rel="shortcut icon" href="resources/favicons/favicon.ico">
-<link rel="icon" sizes="16x16 32x32 64x64" href="resources/favicons/favicon.ico">
-<link rel="icon" type="image/png" sizes="196x196" href="resources/favicons/favicon-192.png">
-<link rel="icon" type="image/png" sizes="160x160" href="resources/favicons/favicon-160.png">
-<link rel="icon" type="image/png" sizes="96x96" href="resources/favicons/favicon-96.png">
-<link rel="icon" type="image/png" sizes="64x64" href="resources/favicons/favicon-64.png">
-<link rel="icon" type="image/png" sizes="32x32" href="resources/favicons/favicon-32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="resources/favicons/favicon-16.png">
-<link rel="apple-touch-icon" href="resources/favicons/favicon-57.png">
-<link rel="apple-touch-icon" sizes="114x114" href="resources/favicons/favicon-114.png">
-<link rel="apple-touch-icon" sizes="72x72" href="resources/favicons/favicon-72.png">
-<link rel="apple-touch-icon" sizes="144x144" href="resources/favicons/favicon-144.png">
-<link rel="apple-touch-icon" sizes="60x60" href="resources/favicons/favicon-60.png">
-<link rel="apple-touch-icon" sizes="120x120" href="resources/favicons/favicon-120.png">
-<link rel="apple-touch-icon" sizes="76x76" href="resources/favicons/favicon-76.png">
-<link rel="apple-touch-icon" sizes="152x152" href="resources/favicons/favicon-152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="resources/favicons/favicon-180.png">
-<meta name="msapplication-TileColor" content="#FFFFFF">
-<meta name="msapplication-TileImage" content="resources/favicons/favicon-144.png">
-<meta name="msapplication-config" content="resources/favicons/browserconfig.xml">
-
-<!--Makes the website responsive on mobile-->
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<!--References-->
-<link href="https://fonts.googleapis.com/css?family=Petit+Formal+Script" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="resources/css/style.css">
-<link rel="stylesheet" type="text/css" href="resources/css/contact.css">
-
-</head>
-<body>
-
-<!--Navigation Bar-->
-<ul class="topnav" id="topNav">
-	<!--Name of Website (clickable)-->
-	<a href="index.html" style="text-decoration: none;">
-		<h1 class="webname">Gerry Minor's Fine Art</h1>
-	</a>
-	<li class="menu">
-		<!--Hamburger menu icon appears when screen gets smaller-->
-		<a href="javascript:void(0);" onclick="menuClicked()">&#9776;</a>
-	</li>
-	<li><a href="index.html">Home</a></li>
-	<li><a href="gallery.html">Gallery</a></li>
-	<li><a href="about.html">About</a></li>
-	<li><a class="active" href="#">Contact</a></li>
-</ul>
-
+---
+layout: default
+title: Gerry Minor's Fine Art | Contact
+css: contact/contact.css
+js: contact/email.js
+---
 <div class="panel">
 	<h3>Send me an email</h3>
 	<input id="subject" placeholder="Subject">
@@ -60,8 +11,3 @@
 	<textarea id="message" placeholder="Write your message here" rows="12"></textarea>
 	<button class="fa fa-paper-plane" id="send" title="Send" onclick="send()"></button>
 </div>
-
-<script type="text/javascript" src="resources/js/menu.js"></script>
-<script type="text/javascript" src="resources/js/contact.js"></script>
-</body>
-</html>
