--- a/contact/index.html
+++ b/contact/index.html
@@ -9,5 +9,5 @@ js: contact/email.js
 	<input id="subject" placeholder="Subject">
 	<br>
 	<textarea id="message" placeholder="Write your message here" rows="12"></textarea>
-	<button class="fa fa-paper-plane" id="send" title="Send" onclick="send()"></button>
+	<button title="Send" onclick="send()">Send</button>
 </div>
